--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "^4.6.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.6",
     "mongoose": "^5.13.3",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
